# FGit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shit.txt  staged  test.cpp
.github/workflows/: cmake.yml
include/: add.hpp  bin.hpp  blob.hpp  commit.hpp  compress.hpp  defaults.hpp  diff.hpp  filehandler.hpp  init.hpp  log.hpp  reset.hpp  status.hpp  status2.hpp
src/: Init.cpp  init.cpp  main.cpp
src/add/: add.cpp
src/commit/: bin.cpp  blob.cpp  commit.cpp
src/diff/: diff.cpp
src/logging/: log.cpp
src/reset/: reset.cpp
src/status/: status.cpp  status2.cpp
src/utils/: compress.cpp  diff.cpp
